# Qi-Bot

./: .gitignore  README.md  config.schema.json  main.py  pyproject.toml  requirements.txt  venv.sh
config/example/: blive.yml  bot.json  bot.yml  shell.yml  tts.yml  web.yml
config/schema/: blive.schema.json  bot.schema.json  crypto.schema.json  file.schema.json  protocol.schema.json  shell.schema.json  tts.schema.json  web.schema.json
modules/: nudge.py  shell.py  tts.py
modules/blive/: __init__.py  config.py  model.py
modules/tts/: __init__.py
tests/: test_cache.py  test_file.py
utils/: __init__.py  const.py  crypto.py  file.py  hash.py  logger.py  model.py  module.py  noise.py  real_typing.py  shell.py  string.py  time.py  tts.py
utils/config/: __init__.py  avilla.py  bot.py  crypto.py  file.py  log.py  protocol.py  shell.py  tts.py  web.py
utils/file/: __init__.py  audio.py  base.py  cache.py  error.py  json.py  types.py  yaml.py
utils/model/: __init__.py  model.py  types.py
utils/online/: __init__.py  aliyun.py
utils/tts/: cache.py
utils/tts/engine/: __init__.py  aliyun.py  espeak.py  pyttsx.py
utils/web/: __init__.py  broadcast.py
